Implémentation de l'IA-Marc V2 : Moteur de recherche avancé (PVS, TT, Move Ordering) et intégration matérielle

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,7 @@ logs/
 ai/chess_nn_weights.npz
 *.pstats
 *.prof
+
+# Opening books (too large for GitHub)
+prototypes/8x8-maquette/firmware/IA-Marc/book/Cerebellum_Light.bin
+*.bin
