feat: Implement 9 difficulty levels and enhance AI engine
Implement 9 adjustable difficulty levels (200 ELO to 1800 ELO) for the AI,
along with a new menu-driven version of chess_game_IA.py to allow user selection.

Key improvements and refactorings:
- Implemented 9 distinct difficulty levels with tailored search parameters, time limits, and error rates.
- Enhanced evaluation function with weighted mobility, improved king safety evaluation, and finer-grained pawn structure analysis.
- Upgraded the search algorithm to a full-featured PVS (Principal Variation Search) with Iterative Deepening, Aspiration Windows, Null Move Pruning, and Late Move Reduction.
- Improved engine stability and performance by refactoring bitboard attack generation.
- Cleaned up repository by removing unnecessary benchmarking scripts and documentation files to focus on the core AI and hardware integration.

This significantly strengthens the AI and improves its user experience on the embedded system.

--- a/prototypes/8x8-maquette/firmware/IA-Marc/V2/requirements.txt
+++ b/prototypes/8x8-maquette/firmware/IA-Marc/V2/requirements.txt
@@ -39,3 +39,4 @@ pytest-benchmark>=4.0.0
 # - Tested on Python 3.8+
 # - Recommended: Python 3.10+ or PyPy3 3.9+
 # - Raspberry Pi OS 64-bit recommended for best performance
+matplotlib
