--- a/prototypes/echiquier_8x8/firmware/requirements.txt
+++ b/prototypes/echiquier_8x8/firmware/requirements.txt
@@ -1,9 +1,11 @@
 adafruit-circuitpython-ht16k33
 adafruit-circuitpython-mcp230xx
 adafruit-circuitpython-tca9548a
+adafruit-circuitpython-rgb-display
+adafruit-blinka
 chess
 gpiozero
 RPi.GPIO
 spidev
 Pillow
-adafruit-circuitpython-rgb-display
+lgpio
